docs: SecurityConfig.java 수정